@@ -16,6 +16,8 @@ New features:
 - Add support for torch.nn.EmbeddingBag
 - Added support for torch.clamp_max and torch.clamp_min
 - Add support for ``torch.min(tensor, dim=.*, keepdim=.*)`` and ``torch.max(tensor, dim=.*, keepdim=.*)`` overloads.
+- Add support for ``poptorch.isRunningOnIpu``. This function returns `True` when executing on IPU and `False` when executing
+  the model outside IPU scope.
 - Add support for torch.amax and torch.amin
 - Add support for attributes in custon ops.
 
